# fluidra

./: .dockerignore  .gitignore  .npmrc  Claude_Code_Kickoff.md  Fluidra_Implementation_Blueprint.md  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/web/: next.config.mjs  package.json  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/components/: AnswerMessage.tsx  AuthGate.tsx  Chat.tsx  Citations.tsx  Composer.tsx  DosingCard.tsx  EscalationCard.tsx  Message.tsx  TypingIndicator.tsx
apps/web/lib/: api.ts  auth.ts  types.ts  useChat.ts
apps/web/public/: Fluidra_Implementation_Blueprint.md  blueprint.html
apps/web/tests/: a11y.test.tsx  api.test.ts  components.test.tsx
apps/web/types/: jest-axe.d.ts
data/manuals/: aquapure_h0567500.md  jandy_jxi_heater.md  jandy_vs_flopro_pump.md  manifest.yaml  polaris_alpha_iq.md
data/web_corpus/: .gitignore  manifest.json
documentation/onboarding/: README.md
documentation/runbooks/: admin.md  deploy.md  observability.md
infrastructure/docker/: .dockerignore  compose.dev.yml  python.Dockerfile  web-docpatch.Dockerfile  web.Dockerfile
infrastructure/terraform/envs/dev/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infrastructure/terraform/modules/artifact-registry/: main.tf
infrastructure/terraform/modules/cloud-armor/: main.tf
infrastructure/terraform/modules/cloud-run-job/: main.tf
infrastructure/terraform/modules/cloud-run-service/: main.tf
infrastructure/terraform/modules/cloud-sql/: main.tf
infrastructure/terraform/modules/iam/: main.tf
infrastructure/terraform/modules/loadbalancer/: main.tf
infrastructure/terraform/modules/monitoring/: main.tf
infrastructure/terraform/modules/project-services/: main.tf
infrastructure/terraform/modules/secret-manager/: main.tf
infrastructure/terraform/modules/vector-search/: main.tf
infrastructure/terraform/modules/workload-identity/: main.tf
scripts/: check_slo.sh  rollout.sh  smoke.sh
services/chat-api/: .env.example  alembic.ini  package.json  pyproject.toml
services/chat-api/chat_api/: admin.py  auth.py  config.py  database.py  main.py  persistence.py  pipeline.py  rag.py
services/chat-api/migrations/: env.py
services/chat-api/migrations/versions/: 0001_init.py
services/chat-api/tests/: test_admin.py  test_auth.py  test_chat.py  test_health.py  test_tracing.py
services/dosing-service/: pyproject.toml
services/dosing-service/dosing_service/: __init__.py  calculator.py  flow.py
services/dosing-service/tests/: test_calculator.py  test_flow.py
services/eval-runner/: pyproject.toml
services/eval-runner/eval_runner/: __init__.py  __main__.py  golden.py  runner.py
services/eval-runner/tests/: test_eval_gate.py
services/ingestion-worker/: package.json  pyproject.toml
services/ingestion-worker/ingestion_worker/: __init__.py  chunker.py  corpus.py  embeddings.py  ingest.py  parser.py  pipeline.py  retrieval.py  types.py  vectorstore.py  vertex_store.py
services/ingestion-worker/tests/: test_admin_store.py  test_chunking.py  test_corpus.py  test_embed_batching.py  test_factory.py  test_retrieval.py  test_vertex_store.py
services/orchestrator/: package.json  pyproject.toml
services/orchestrator/orchestrator/: __init__.py  citations.py  graph.py  groundedness.py  llm.py  main.py  state.py  text.py
services/orchestrator/tests/: conftest.py  test_orchestrator.py
services/safety-gateway/: package.json  pyproject.toml
services/safety-gateway/safety_gateway/: __init__.py  classifier.py  intent.py  main.py  router.py
services/safety-gateway/tests/: test_service.py
tests/safety/: conftest.py  test_mixing_block.py  test_physical_risk.py  test_pii_redaction.py  test_policy_version.py  test_routing_precision.py
