[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chat-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-json-logger>=2.0.7",
    "shared-types",
    "safety-policy",
    "safety-gateway",
    "orchestrator",
    "dosing-service",
    "ingestion-worker",
    "observability",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["chat_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
testpaths = ["tests"]

[tool.uv.sources]
shared-types     = { workspace = true }
safety-policy    = { workspace = true }
safety-gateway   = { workspace = true }
orchestrator     = { workspace = true }
dosing-service   = { workspace = true }
ingestion-worker = { workspace = true }
observability    = { workspace = true }
