[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dosing-service"
version = "0.1.0"
requires-python = ">=3.12"
description = "Deterministic pool-chemistry dosing calculator. Real math from validated tables — never an LLM."
dependencies = ["chemistry-tables"]

[dependency-groups]
dev = ["pytest>=8.2.0"]

[tool.hatch.build.targets.wheel]
packages = ["dosing_service"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]

[tool.uv.sources]
chemistry-tables = { workspace = true }
