[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval-runner"
version = "0.1.0"
requires-python = ">=3.12"
description = "Golden-set evals + safety gate (blueprint §6.6). Blocks merge on regression."
dependencies = [
    "chat-api",
    "ingestion-worker",
    "orchestrator",
    "safety-gateway",
]

[dependency-groups]
dev = ["pytest>=8.2.0"]

[tool.hatch.build.targets.wheel]
packages = ["eval_runner"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]

[tool.uv.sources]
chat-api         = { workspace = true }
ingestion-worker = { workspace = true }
orchestrator     = { workspace = true }
safety-gateway   = { workspace = true }
