[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ingestion-worker"
version = "0.1.0"
requires-python = ">=3.12"
description = "KB ingestion: parse -> chunk -> embed -> index. MVP uses pgvector; Vertex Vector Search swaps in behind the same interface."
dependencies = [
    "numpy>=1.26",
    "pypdf>=4.2.0",
    "pyyaml>=6.0",
    "shared-types",
    # pgvector store is the local/dev default (blueprint's small-scale fallback).
    "sqlalchemy>=2.0.30",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.9",
    # Vertex SDK: real embeddings in cloud. Imported lazily so tests still run
    # offline with fake embeddings, but it must be in the deployed image.
    "google-cloud-aiplatform>=1.60.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ingestion_worker"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]

[tool.uv.sources]
shared-types = { workspace = true }
