[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-json-logger>=2.0.7",
    "langgraph>=0.2.0",
    "shared-types",
    "safety-policy",
    "prompts",
    "ingestion-worker",
    "observability",
]

# Vertex SDK only needed for real Gemini calls; imported lazily so tests run
# offline with the fake LLM.
[project.optional-dependencies]
vertex = ["google-cloud-aiplatform>=1.60.0"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
testpaths = ["tests"]

[tool.uv.sources]
shared-types     = { workspace = true }
safety-policy    = { workspace = true }
prompts          = { workspace = true }
ingestion-worker = { workspace = true }
observability    = { workspace = true }
